--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,3 +2,6 @@ Anypay_kotlinVersion=1.3.50
 Anypay_compileSdkVersion=28
 Anypay_buildToolsVersion=28.0.3
 Anypay_targetSdkVersion=28
+
+android.useAndroidX=true
+android.enableJetifier=true
