--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,9 +33,9 @@ android {
     targetSdkVersion getExtOrIntegerDefault('targetSdkVersion')
     versionCode 1
     versionName "1.0"
-    
+
   }
-  
+
   buildTypes {
     release {
       minifyEnabled false
@@ -127,4 +127,22 @@ dependencies {
   // noinspection GradleDynamicVersion
   api 'com.facebook.react:react-native:+'
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+  compile files('com.anywherecommerce.android.sdk-release.aar')
+
+  implementation 'com.google.code.gson:gson:2.8.5'
+  implementation('com.squareup.retrofit2:converter-gson:2.3.0') {
+      exclude module: 'gson'
+  }
+  implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
+  implementation('com.squareup.retrofit2:converter-simplexml:2.3.0') {
+      exclude group: 'stax', module: 'stax-api'
+      exclude group: 'stax', module: 'stax'
+      exclude group: 'xpp3', module: 'xpp3'
+  }
+  implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+  api 'com.googlecode.libphonenumber:libphonenumber:8.5.0'
+  implementation 'com.github.smart-fun:XmlToJson:1.4.4'
+  api 'org.slf4j:slf4j-api:1.7.25'
+  api 'com.github.tony19:logback-android:2.0.0'
 }
